@@ -1,21 +1,21 @@
-## Process this file with automake to produce Makefile.in
-## Makefile.am for hello/man.
-## 
-## Copyright (C) 1996, 1997, 2005, 2006 Free Software Foundation, Inc.
-##
-## This program is free software; you can redistribute it and/or modify
-## it under the terms of the GNU General Public License as published by
-## the Free Software Foundation; either version 2, or (at your option)
-## any later version.
-##
-## This program is distributed in the hope that it will be useful,
-## but WITHOUT ANY WARRANTY; without even the implied warranty of
-## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-## GNU General Public License for more details.
-##
-## You should have received a copy of the GNU General Public License
-## along with this program; if not, write to the Free Software Foundation,
-## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+# Process this file with automake to produce Makefile.in
+# Makefile.am for hello/man.
+# 
+# Copyright (C) 1996, 1997, 2005, 2006 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 man_MANS = hello.1
 EXTRA_DIST = $(man_MANS)
@@ -26,5 +26,6 @@ common_mandeps = $(top_srcdir)/configure.ac
 
 # Depend on the source, not the binary; we don't need to regenerate the
 # binary when any source file changes, only the main one.
+# Use -o so that the `missing' program can infer the output file.
 hello.1: $(top_srcdir)/src/hello.c $(common_mandeps)
-	$(HELP2MAN) --name="Friendly Greeting Program" ../src/hello >$@
+	$(HELP2MAN) --name="Friendly Greeting Program" ../src/hello -o $@
